# pennyroyal

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/services/: board.py
app/templates/: _board_table.html  base.html  weekly_board.html
ffwb/: cli.py  cli_proj_tank.py  pipeline.py  scoring.py  vor.py
ffwb/ingest/: __init__.py  _nfl_compat.py  adp.py  ids.py  io.py  nflfast.py  sleeper.py  tank01.py  tank01_players.py
notebooks/: 01_ingest.ipynb  02_scoring_vor.ipynb
tests/: test_actual_ingest.py  test_adp.py  test_ingest_paths.py  test_scoring.py  test_vor.py
